added crossfilter as service

--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
   <div ng-controller="navbar" navbar></div>
 
   <div class="container fade-view" ng-view></div>
-  
+
   <div id="footer">
     <div class="container">
       <p class="text-muted">A project by Medialab - SciencesPo</p>
@@ -22,6 +22,7 @@
   <script src="lib/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
   <script src="lib/bower_components/d3/d3.min.js"></script>
+  <script src="lib/bower_components/crossfilter/crossfilter.min.js"></script>
 
   <!-- <script src="lib/ricardo/bivariate.js"></script> -->
 
