--- a/client/index.html
+++ b/client/index.html
@@ -4,12 +4,14 @@
   <meta charset="utf-8">
   <title>RICardo project</title>
   <link rel="stylesheet" href="lib/bower_components/bootstrap/dist/css/bootstrap.css"/>
+  <link rel="stylesheet" href="lib/bower_components/angular-ui-select/dist/select.css">
+  <link rel="stylesheet" href="lib/bower_components/ng-grid/ng-grid.css">
   <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
   <div ng-controller="navbar" navbar></div>
 
-  <div class="container fade-view" ng-view></div>
+  <div class="container" ng-view></div>
 
   <div id="footer">
     <div class="container">
@@ -24,12 +26,15 @@
   <script src="lib/bower_components/d3/d3.min.js"></script>
   <script src="lib/bower_components/crossfilter/crossfilter.min.js"></script>
 
-  <!-- <script src="lib/ricardo/bivariate.js"></script> -->
+  <script src="lib/ricardo/stackedbar.js"></script>
 
   <script src="lib/angular/angular.js"></script>
   <script src="lib/angular/angular-route.js"></script>
   <script src="lib/angular/angular-animate.js"></script>
+  <script src="lib/angular/angular-sanitize.js"></script>
   <script src="lib/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+  <script src="lib/bower_components/angular-ui-select/dist/select.js"></script>
+  <script src="lib/bower_components/ng-grid/build/ng-grid.js"></script>
 
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
