--- a/client/index.html
+++ b/client/index.html
@@ -27,6 +27,7 @@
   <script src="lib/bower_components/crossfilter/crossfilter.min.js"></script>
 
   <script src="lib/ricardo/stackedbar.js"></script>
+  <script src="lib/ricardo/stream.js"></script>
 
   <script src="lib/angular/angular.js"></script>
   <script src="lib/angular/angular-route.js"></script>
