--- a/client/index.html
+++ b/client/index.html
@@ -36,6 +36,7 @@
   <script src="lib/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
   <script src="lib/bower_components/angular-ui-select/dist/select.js"></script>
   <script src="lib/bower_components/ng-grid/build/ng-grid.js"></script>
+  <script src="lib/bower_components/ng-grid/plugins/ng-grid-csv-export.js"></script>
 
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
