country view bootstrapped

--- a/client/index.html
+++ b/client/index.html
@@ -28,6 +28,7 @@
 
   <script src="lib/ricardo/stackedbar.js"></script>
   <script src="lib/ricardo/stream.js"></script>
+  <script src="lib/ricardo/doublebar.js"></script>
 
   <script src="lib/angular/angular.js"></script>
   <script src="lib/angular/angular-route.js"></script>
