--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="lib/bower_components/bootstrap/dist/css/bootstrap.css"/>
   <link rel="stylesheet" href="lib/bower_components/angular-ui-select/dist/select.css">
   <link rel="stylesheet" href="lib/bower_components/ng-grid/ng-grid.css">
+  <link rel="stylesheet" href="lib/bower_components/angular-loading-bar/build/loading-bar.css"/>
   <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
@@ -39,6 +40,7 @@
   <script src="lib/bower_components/angular-ui-select/dist/select.js"></script>
   <script src="lib/bower_components/ng-grid/build/ng-grid.js"></script>
   <script src="lib/bower_components/ng-grid/plugins/ng-grid-csv-export.js"></script>
+  <script src="lib/bower_components/angular-loading-bar/build/loading-bar.js"></script>
 
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
