--- a/client/index.html
+++ b/client/index.html
@@ -43,6 +43,7 @@
   <script src="lib/bower_components/angular-loading-bar/build/loading-bar.js"></script>
 
   <script src="js/app.js"></script>
+  <script src="js/config.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
