--- a/client/index.html
+++ b/client/index.html
@@ -31,6 +31,7 @@
   <script src="lib/ricardo/stream.js"></script>
   <script src="lib/ricardo/doublebar.js"></script>
   <script src="lib/ricardo/linechart.js"></script>
+  <script src="lib/ricardo/missing.js"></script>
 
   <script src="lib/angular/angular.js"></script>
   <script src="lib/angular/angular-route.js"></script>
