--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
   <title>RICardo</title>
   <link rel="stylesheet" href="lib/bower_components/bootstrap/dist/css/bootstrap.css"/>
   <link rel="stylesheet" href="lib/bower_components/angular-ui-select/dist/select.css">
-  <link rel="stylesheet" href="lib/ng-grid/ng-grid.css">
+  <link rel="stylesheet" href="lib/bower_components/ng-grid/ng-grid.css">
   <link rel="stylesheet" href="lib/bower_components/angular-loading-bar/build/loading-bar.css"/>
   <link rel="stylesheet" href="css/style.css"/>
 </head>
@@ -39,8 +39,8 @@
   <script src="lib/angular/angular-sanitize.js"></script>
   <script src="lib/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
   <script src="lib/bower_components/angular-ui-select/dist/select.js"></script>
-  <script src="lib/ng-grid/build/ng-grid.js"></script>
-  <script src="lib/ng-grid/plugins/ng-grid-csv-export.js"></script>
+  <script src="lib/bower_components/ng-grid/build/ng-grid.js"></script>
+  <script src="lib/bower_components/ng-grid/plugins/ng-grid-csv-export.js"></script>
   <script src="lib/bower_components/angular-loading-bar/build/loading-bar.js"></script>
 
   <script src="js/app.js"></script>
