prepare new charts

--- a/client/index.html
+++ b/client/index.html
@@ -49,5 +49,6 @@
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
+  <script src="js/directives-addendum.js"></script>
 </body>
 </html>
