first part of new Viz for partners in country view

--- a/client/index.html
+++ b/client/index.html
@@ -29,7 +29,7 @@
 
   <script src="lib/ricardo/stackedbar.js"></script>
   <script src="lib/ricardo/stream.js"></script>
-  <script src="lib/ricardo/doublebar.js"></script>
+  <script src="lib/ricardo/partnersHistogram.js"></script>
   <script src="lib/ricardo/linechart.js"></script>
   <script src="lib/ricardo/missing.js"></script>
 
