--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>RICardo</title>
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="lib/bower_components/bootstrap/dist/css/bootstrap.css"/>
   <link rel="stylesheet" href="lib/bower_components/angular-ui-select/dist/select.css">
   <link rel="stylesheet" href="lib/bower_components/ng-grid/ng-grid.css">
@@ -31,7 +32,8 @@
   <script src="lib/ricardo/stream.js"></script>
   <script src="lib/ricardo/partnersHistogram.js"></script>
   <script src="lib/ricardo/linechart.js"></script>
-  <script src="lib/ricardo/missing.js"></script>
+  
+<!--   // <script src="lib/ricardo/missing.js"></script> -->
 
   <script src="lib/angular/angular.js"></script>
   <script src="lib/angular/angular-route.js"></script>
@@ -42,6 +44,8 @@
   <script src="lib/bower_components/ng-grid/build/ng-grid.js"></script>
   <script src="lib/bower_components/ng-grid/plugins/ng-grid-csv-export.js"></script>
   <script src="lib/bower_components/angular-loading-bar/build/loading-bar.js"></script>
+<!--   // <script src="lib/ricardo/dragit.js"></script>
+  // <script type="text/javascript" src="https://apis.google.com/js/platform.js"></script> -->
 
   <script src="js/app.js"></script>
   <script src="js/config.js"></script>
