--- a/client/index.html
+++ b/client/index.html
@@ -25,8 +25,8 @@
   <script src="lib/bower_components/d3/d3.min.js"></script>
   <script src="lib/bower_components/crossfilter/crossfilter.min.js"></script>
 
-  <script src="lib/ricardo/partnersHistogram.js"></script>
-  <script src="lib/ricardo/linechart.js"></script>
+  <!-- <script src="lib/ricardo/partnersHistogram.js"></script> -->
+  <!-- <script src="lib/ricardo/linechart.js"></script> -->
   
 <!--   // <script src="lib/ricardo/missing.js"></script> -->
 
@@ -45,7 +45,7 @@
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
-  <script src="js/directives.js"></script>
+  <!-- <script src="js/directives.js"></script> -->
   <script src="js/directives-addendum.js"></script>
 </body>
 </html>
