add links medialab CHSP in footer

--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,12 @@
   <div id="view" ng-view></div>
   <div id="footer">
     <div class="container">
-      <p class="text-muted">A project by Medialab - SciencesPo</p>
+      <p class="text-muted">
+      A project by
+      <a href="http://www.medialab.sciences-po.fr/fr/">Medialab - SciencesPo</a> &
+      <a href="http://chsp.sciences-po.fr/">Centre d'histoire de Sciences Po (CHSP)</a>
+      
+      </p>
     </div>
   </div>
 
