--- a/client/index.html
+++ b/client/index.html
@@ -17,8 +17,8 @@
     <div class="container">
       <p class="text-muted">
       A project by
-      <a href="http://www.medialab.sciences-po.fr/fr/">Medialab - SciencesPo</a> &
-      <a href="http://chsp.sciences-po.fr/">Centre d'histoire de Sciences Po (CHSP)</a>
+      <a href="http://www.medialab.sciences-po.fr">médialab</a> &
+      <a href="http://chsp.sciences-po.fr">Centre d'histoire de Sciences Po (CHSP)</a>
       
       </p>
     </div>
