--- a/client/index.html
+++ b/client/index.html
@@ -40,6 +40,8 @@
   <script src="lib/bower_components/ng-grid/build/ng-grid.js"></script>
   <script src="lib/bower_components/ng-grid/plugins/ng-grid-csv-export.js"></script>
   <script src="lib/bower_components/angular-loading-bar/build/loading-bar.js"></script>
+  <script src="lib/bower_components/angular-translate/angular-translate.min.js"></script>
+
 
   <script src="js/app.js"></script>
   <script src="js/config.js"></script>
