directives folder with all directives

--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>RICardo</title>
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="lib/bower_components/bootstrap/dist/css/bootstrap.css"/>
   <link rel="stylesheet" href="lib/bower_components/angular-ui-select/dist/select.css">
   <link rel="stylesheet" href="lib/bower_components/ng-grid/ng-grid.css">
@@ -48,6 +48,20 @@
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
-  <script src="js/directives-addendum.js"></script>
+  <script src="directives/directives.js"></script>
+  <script src="directives/navbar.directive.js"></script>
+  <script src="directives/countryTitle.directive.js"></script>
+  <script src="directives/worldTitle.directive.js"></script>
+  <script src="directives/linechartTitle.directive.js"></script>
+  <script src="directives/inlineSelectCountry.directive.js"></script>
+  <script src="directives/inlineSelectYear.directive.js"></script>
+  <script src="directives/inlineSelectCurrency.directive.js"></script>
+  <script src="directives/dualtimeline.directive.js"></script>
+  <script src="directives/comparisonTimeline.directive.js"></script>
+  <script src="directives/brushingTimeline.directive.js"></script>
+  <script src="directives/partnersHistogram.directive.js"></script>
+  <script src="directives/barChart.directive.js"></script>
+  <script src="directives/linechartWorld.directive.js"></script>
+  
 </body>
 </html>
