controllers folder with all controllers

--- a/client/index.html
+++ b/client/index.html
@@ -46,8 +46,18 @@
   <script src="js/app.js"></script>
   <script src="js/config.js"></script>
   <script src="js/services.js"></script>
-  <script src="js/controllers.js"></script>
+
+
   <script src="js/filters.js"></script>
+
+  <script src="controllers/navbar.controller.js"></script>
+  <script src="controllers/translate.controller.js"></script>
+  <script src="controllers/bilateral.controller.js"></script>
+  <script src="controllers/country.controller.js"></script>
+  <script src="controllers/world.controller.js"></script>
+
+
+
   <script src="directives/directives.js"></script>
   <script src="directives/navbar.directive.js"></script>
   <script src="directives/countryTitle.directive.js"></script>
