--- a/client/index.html
+++ b/client/index.html
@@ -41,37 +41,32 @@
   <script src="lib/bower_components/ng-grid/plugins/ng-grid-csv-export.js"></script>
   <script src="lib/bower_components/angular-loading-bar/build/loading-bar.js"></script>
   <script src="lib/bower_components/angular-translate/angular-translate.min.js"></script>
+  <script src="lib/bower_components/oclazyload/dist/ocLazyLoad.min.js"></script>
 
 
   <script src="js/app.js"></script>
   <script src="js/config.js"></script>
   <script src="js/services.js"></script>
-
-
   <script src="js/filters.js"></script>
 
   <script src="controllers/navbar.controller.js"></script>
   <script src="controllers/translate.controller.js"></script>
-  <script src="controllers/bilateral.controller.js"></script>
-  <script src="controllers/country.controller.js"></script>
-  <script src="controllers/world.controller.js"></script>
-
 
 
   <script src="directives/directives.js"></script>
   <script src="directives/navbar.directive.js"></script>
+
   <script src="directives/countryTitle.directive.js"></script>
   <script src="directives/worldTitle.directive.js"></script>
   <script src="directives/linechartTitle.directive.js"></script>
   <script src="directives/inlineSelectCountry.directive.js"></script>
   <script src="directives/inlineSelectYear.directive.js"></script>
   <script src="directives/inlineSelectCurrency.directive.js"></script>
+  
   <script src="directives/dualtimeline.directive.js"></script>
-  <script src="directives/comparisonTimeline.directive.js"></script>
   <script src="directives/brushingTimeline.directive.js"></script>
-  <script src="directives/partnersHistogram.directive.js"></script>
-  <script src="directives/barChart.directive.js"></script>
   <script src="directives/linechartWorld.directive.js"></script>
+
   
 </body>
 </html>
