--- a/client/index.html
+++ b/client/index.html
@@ -42,6 +42,9 @@
   <script src="lib/bower_components/angular-loading-bar/build/loading-bar.js"></script>
   <script src="lib/bower_components/angular-translate/angular-translate.min.js"></script>
   <script src="lib/bower_components/oclazyload/dist/ocLazyLoad.min.js"></script>
+  <script src="lib/bower_components/angulartics/dist/angulartics.min.js"></script>
+  <script src="lib/bower_components/angulartics-google-analytics/dist/angulartics-google-analytics.min.js"></script>
+
 
 
   <script src="js/app.js"></script>
