update translation on views

--- a/client/index.html
+++ b/client/index.html
@@ -41,6 +41,7 @@
   <script src="lib/bower_components/ng-grid/plugins/ng-grid-csv-export.js"></script>
   <script src="lib/bower_components/angular-loading-bar/build/loading-bar.js"></script>
   <script src="lib/bower_components/angular-translate/angular-translate.min.js"></script>
+  <script src="lib/bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
   <script src="lib/bower_components/oclazyload/dist/ocLazyLoad.min.js"></script>
   <script src="lib/bower_components/angulartics/dist/angulartics.min.js"></script>
   <script src="lib/bower_components/angulartics-google-analytics/dist/angulartics-google-analytics.min.js"></script>
