--- a/client/index.html
+++ b/client/index.html
@@ -4,32 +4,24 @@
   <meta charset="utf-8">
   <title>RICardo</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="lib/bower_components/bootstrap/dist/css/bootstrap.css"/>
+  <link rel="stylesheet" href="lib/bower_components/bootstrap/dist/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="lib/bower_components/angular-ui-select/dist/select.css">
-  <link rel="stylesheet" href="lib/bower_components/ng-grid/ng-grid.css">
-  <link rel="stylesheet" href="lib/bower_components/angular-loading-bar/build/loading-bar.css"/>
+  <link rel="stylesheet" href="lib/bower_components/ng-grid/ng-grid.min.css">
+  <link rel="stylesheet" href="lib/bower_components/angular-loading-bar/build/loading-bar.min.css"/>
   <link rel="stylesheet" href="css/style.css"/>
+  <!-- <link rel="stylesheet" href="styles.css"/> -->
 </head>
 <body>
   <div id="nav" ng-controller="navbar" navbar></div>
   <div id="view" ng-view></div>
-  <div id="footer">
-    <div class="container">
-      <p class="text-muted">
-      A project by
-      <a href="http://www.medialab.sciences-po.fr">médialab</a> &
-      <a href="http://chsp.sciences-po.fr">Centre d'histoire de Sciences Po (CHSP)</a>
-      
-      </p>
-    </div>
-  </div>
+
+  <!-- <script src="lib.js"></script> -->
 
   <script src="lib/bower_components/jquery/dist/jquery.min.js"></script>
   <script src="lib/bower_components/jquery-ui/ui/minified/jquery-ui.min.js"></script>
   <script src="lib/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="lib/bower_components/d3/d3.min.js"></script>
   <script src="lib/bower_components/crossfilter/crossfilter.min.js"></script>
-
 
   <script src="lib/angular/angular.js"></script>
   <script src="lib/angular/angular-route.js"></script>
@@ -48,6 +40,8 @@
 
 
 
+  <!-- <script src="app.js"></script> -->
+
   <script src="js/app.js"></script>
   <script src="js/config.js"></script>
   <script src="js/services.js"></script>
@@ -55,21 +49,25 @@
 
   <script src="controllers/navbar.controller.js"></script>
   <script src="controllers/translate.controller.js"></script>
+  <script src="controllers/bilateral.controller.js"></script>
+  <script src="controllers/country.controller.js"></script>
+  <script src="controllers/world.controller.js"></script>
 
 
   <script src="directives/directives.js"></script>
   <script src="directives/navbar.directive.js"></script>
-
   <script src="directives/countryTitle.directive.js"></script>
   <script src="directives/worldTitle.directive.js"></script>
   <script src="directives/linechartTitle.directive.js"></script>
   <script src="directives/inlineSelectCountry.directive.js"></script>
   <script src="directives/inlineSelectYear.directive.js"></script>
   <script src="directives/inlineSelectCurrency.directive.js"></script>
-  
+  <script src="directives/barChart.directive.js"></script>
   <script src="directives/dualtimeline.directive.js"></script>
   <script src="directives/brushingTimeline.directive.js"></script>
   <script src="directives/linechartWorld.directive.js"></script>
+  <script src="directives/comparisonTimeline.directive.js"></script>
+  <script src="directives/partnersHistogram.directive.js"></script>
 
   
 </body>
