--- a/client/index.html
+++ b/client/index.html
@@ -44,6 +44,7 @@
   <script src="js/app.js"></script>
   <script src="js/config.js"></script>
   <script src="js/services.js"></script>
+  <script src="js/country.services.js"></script>
   <script src="js/filters.js"></script>
 
   <script src="controllers/navbar.controller.js"></script>
