add network viz test

--- a/client/index.html
+++ b/client/index.html
@@ -37,6 +37,15 @@
   <script src="lib/bower_components/angulartics/dist/angulartics.min.js"></script>
   <script src="lib/bower_components/angulartics-google-analytics/dist/angulartics-google-analytics.min.js"></script>
 
+  <script src="lib/sigma/sigma.min.js"></script>
+  <script src="lib/sigma/sigma.parsers.json.min.js"></script>
+  <script src="lib/sigma/sigma.layout.forceAtlas2/supervisor.js"></script>
+  <script src="lib/sigma/sigma.layout.forceAtlas2/worker.js"></script>
+  <script src="lib/sigma/JLouvain.js"></script>
+  <script src="lib/sigma/sigma.plugins.neighborhoods.js"></script>
+  <script src="lib/sigma/sigma.renderers.snapshot.js"></script>
+
+
 
 
   <!-- <script src="app.js"></script> -->
@@ -52,6 +61,7 @@
   <script src="controllers/bilateral.controller.js"></script>
   <script src="controllers/country.controller.js"></script>
   <script src="controllers/world.controller.js"></script>
+  <script src="controllers/network.controller.js"></script>
 
 
   <script src="directives/directives.js"></script>
