--- a/client/index.html
+++ b/client/index.html
@@ -23,7 +23,7 @@
   <script src="lib/bower_components/d3/d3.min.js"></script>
   <script src="lib/bower_components/crossfilter/crossfilter.min.js"></script>
 
-  <script src="lib/angular/angular.min.js"></script>
+  <script src="lib/angular/angular.js"></script>
   <script src="lib/angular/angular-route.js"></script>
   <script src="lib/angular/angular-animate.js"></script>
   <script src="lib/angular/angular-sanitize.js"></script>
