add matrix - reportings available year view

--- a/client/index.html
+++ b/client/index.html
@@ -60,6 +60,7 @@
   <script src="controllers/country.controller.js"></script>
   <script src="controllers/world.controller.js"></script>
   <script src="controllers/network.controller.js"></script>
+  <script src="controllers/matrix.controller.js"></script>
 
   <script src="directives/directives.js"></script>
   <script src="directives/navbar.directive.js"></script>
@@ -85,6 +86,6 @@
   ga('create', 'UA-37695848-8', 'auto');
   ga('send', 'pageview');
 </script>
-  
+
 </body>
 </html>
