add directive to display matrix

--- a/client/index.html
+++ b/client/index.html
@@ -76,6 +76,7 @@
   <script src="directives/linechartWorld.directive.js"></script>
   <script src="directives/comparisonTimeline.directive.js"></script>
   <script src="directives/partnersHistogram.directive.js"></script>
+  <script src="directives/reportingsAvailable.directive.js"></script>
 
   <!-- Analytics -->
 <script>
