--- a/client/index.html
+++ b/client/index.html
@@ -77,6 +77,7 @@
   <script src="directives/comparisonTimeline.directive.js"></script>
   <script src="directives/partnersHistogram.directive.js"></script>
   <script src="directives/reportingsAvailable.directive.js"></script>
+   <script src="directives/collapseLegend.directive.js"></script>
 
   <!-- Analytics -->
 <script>
