add metadata view

--- a/client/index.html
+++ b/client/index.html
@@ -45,6 +45,7 @@
   <script src="lib/sigma/sigma.plugins.neighborhoods.js"></script>
   <script src="lib/sigma/sigma.renderers.snapshot.js"></script>
   <script src="lib/sigma/sigma.plugins.filter.js"></script>
+  <script src="lib/sigma/sigma.canvas.hoveredNode.js"></script>
 
   <!-- <script src="app.js"></script> -->
 
@@ -77,7 +78,9 @@
   <script src="directives/comparisonTimeline.directive.js"></script>
   <script src="directives/partnersHistogram.directive.js"></script>
   <script src="directives/reportingsAvailable.directive.js"></script>
-   <script src="directives/collapseLegend.directive.js"></script>
+  <script src="directives/collapseLegend.directive.js"></script>
+  <script src="directives/reportingContinent.directive.js"></script>
+  <script src="directives/reportingEntities.directives.js"></script>
 
   <!-- Analytics -->
 <script>
