--- a/client/index.html
+++ b/client/index.html
@@ -80,7 +80,8 @@
   <script src="directives/reportingContinent.directive.js"></script>
   <script src="directives/reportingEntities.directive.js"></script>
   <script src="directives/reportingWorld.directive.js"></script>
-   <script src="directives/reportingSynth.directive.js"></script>
+  <script src="directives/reportingSynth.directive.js"></script>
+  <script src="directives/numberFlows.directive.js"></script>
 
   <!-- Analytics -->
 <script>
