--- a/client/index.html
+++ b/client/index.html
@@ -3,20 +3,22 @@
 <head>
   <meta charset="utf-8">
   <title>RICardo</title>
+  <!-- build:css css/style.css -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="lib/bower_components/bootstrap/dist/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="lib/bower_components/angular-ui-select/dist/select.css">
   <link rel="stylesheet" href="lib/bower_components/ng-grid/ng-grid.min.css">
   <link rel="stylesheet" href="lib/bower_components/angular-loading-bar/build/loading-bar.min.css"/>
   <link rel="stylesheet" href="css/style.css"/>
-  <!-- <link rel="stylesheet" href="styles.css"/> -->
+  <!-- endbuild -->
+>
 </head>
 <body>
   <div id="nav" ng-controller="navbar" navbar></div>
   <div id="view" ng-view></div>
 
-  <!-- <script src="lib.js"></script> -->
 
+   <!-- build:js scripts/lib.js -->
   <script src="lib/bower_components/jquery/dist/jquery.min.js"></script>
   <script src="lib/bower_components/jquery-ui/ui/minified/jquery-ui.min.js"></script>
   <script src="lib/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -46,8 +48,8 @@
   <script src="lib/sigma/sigma.renderers.snapshot.js"></script>
   <script src="lib/sigma/sigma.plugins.filter.js"></script>
   <script src="lib/sigma/sigma.canvas.hoveredNode.js"></script>
-  <!-- <script src="app.js"></script> -->
-
+  <!-- endbuild -->
+ <!-- build:js scripts/app.js -->
   <script src="js/app.js"></script>
   <script src="js/config.js"></script>
   <script src="js/services.js"></script>
@@ -81,7 +83,7 @@
   <script src="directives/reportingWorld.directive.js"></script>
   <script src="directives/reportingSynth.directive.js"></script>
   <script src="directives/numberFlows.directive.js"></script>
-
+   <!-- endbuild -->
   <!-- Analytics -->
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
