--- a/client/index.html
+++ b/client/index.html
@@ -14,15 +14,13 @@
   <!-- endbuild -->
 </head>
 <body>
-  <div id="nav" ng-controller="navbar" navbar></div>
+  <header id="nav" ng-controller="navbar" navbar></header>
   <div id="view" ng-view></div>
   <footer>
     <div class="container">
       <div class="row">
         <ul class="list-unstyled list-inline col-sm-12">
           <li><a href="#/legalNotice">Legal Notice</a></li>
-        </ul>
-        <ul>
           <li><a href="#">SciencesPo Médialab</a></li>
           <li><a href="#">SciencesPo Centre d'histoire</a></li>
         </ul>
