--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>RICardo</title>
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,400i,500,600,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,400i,500,600,700|Open+Sans:400,400i,600,600i,700,700i" rel="stylesheet">
   <!-- build:css css/style.css -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="lib/bower_components/bootstrap/dist/css/bootstrap.min.css"/>
