--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" href="lib/bower_components/ng-grid/ng-grid.min.css">
   <link rel="stylesheet" href="lib/bower_components/angular-loading-bar/build/loading-bar.min.css"/>
   <link rel="stylesheet" href="css/style.css"/>
+  <link href=/apple-touch-icon.png rel=apple-touch-icon>
+  <link href=/favicon.ico rel=icon>
   <!-- endbuild -->
 </head>
 <body>
@@ -21,8 +23,8 @@
       <div class="row">
         <ul class="list-unstyled list-inline col-sm-12">
           <li><a href="#/legalNotice">Legal Notice</a></li>
-          <li><a href="#">SciencesPo Médialab</a></li>
-          <li><a href="#">SciencesPo Centre d'histoire</a></li>
+          <li><a href="https://twitter.com/medialab_scpo" target="_blank">SciencesPo Médialab</a></li>
+          <li><a href="https://twitter.com/ScPo_CHSP" target="_blank">SciencesPo Centre d'histoire</a></li>
         </ul>
       </div>
     </div>
@@ -61,7 +63,7 @@
   <script src="lib/sigma/sigma.plugins.filter.js"></script>
   <script src="lib/sigma/sigma.canvas.hoveredNode.js"></script>
   <!-- endbuild -->
- <!-- build:js scripts/app.js -->
+  <!-- build:js scripts/app.js -->
   <script src="js/app.js"></script>
   <script src="js/config.js"></script>
   <script src="js/services.js"></script>
