add favicons + add content legal notice + fix various html

--- a/client/index.html
+++ b/client/index.html
@@ -11,8 +11,8 @@
   <link rel="stylesheet" href="lib/bower_components/ng-grid/ng-grid.min.css">
   <link rel="stylesheet" href="lib/bower_components/angular-loading-bar/build/loading-bar.min.css"/>
   <link rel="stylesheet" href="css/style.css"/>
-  <link href=/apple-touch-icon.png rel=apple-touch-icon>
-  <link href=/favicon.ico rel=icon>
+  <link href="../img/favicon.ico" rel="icon">
+  <link href="../img/apple-touch-icon.png" rel="apple-touch-icon">
   <!-- endbuild -->
 </head>
 <body>
