--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,8 @@
 <html lang="en" ng-app="ricardo">
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="Cache-control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
   <title>RICardo</title>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,400i,500,600,700|Open+Sans:400,400i,600,600i,700,700i" rel="stylesheet">
   <!-- build:css css/style.css -->
