added blog RSS parsing fixes #57

--- a/client/index.html
+++ b/client/index.html
@@ -77,6 +77,7 @@
   <script src="controllers/world.controller.js"></script>
   <script src="controllers/network.controller.js"></script>
   <script src="controllers/matrix.controller.js"></script>
+  <script src="controllers/home.controller.js"></script>
 
   <script src="directives/directives.js"></script>
   <script src="directives/navbar.directive.js"></script>
