--- a/WEHC_202207/index.html
+++ b/WEHC_202207/index.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Spectacle presentation</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700&display=swap" rel="stylesheet">
+    <style>
+      th,
+      td,
+      table,
+      tr {
+        font-size: inherit !important;
+      }
+      .citation a {
+        font-size: inherit;
+      }
+    </style>
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
